[tool.poetry]
name = "evaluation-metrics"
version = "0.1.0"
description = "This Package contains methods to evaluate the ML Model metrics."
authors = ["Ks Tarun kstarun27@gmail.com"]
readme = "README.md"
packages = [{include = "evaluation_metrics"}]
license = {file = "LICENSE.txt"}

requires-python = ">=3.8"

dependencies = [
    "Werkzeug>=2.3.6",
    "Jinja2>=3.1.2",
    "itsdangerous>=2.1.2",
    "click>=8.1.3",
    "blinker>=1.6.2",
    "importlib-metadata>=3.6.0; python_version < '3.10'",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
