[tool.poetry]
name = "evaluation-metrics"
version = "0.1.0"
description = "This Package contains methods to evaluate the ML Model metrics."
authors = ["Ks Tarun kstarun27@gmail.com"]
readme = "README.md"
packages = [{include = "evaluation_metrics"}]
license = {file = "LICENSE.txt"}

requires-python = ">=3.8"

dependencies = [
  "pandas",
  "matplotlib",
  "scikit-learn",
]

[project.urls]
"Source Code" = "https://github.com/KSTarun/evaluation-metrics/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
